# alibaba-cloud-ai-hackathon

./: README.md
api/: .env.example  .gitignore  Dockerfile  pyproject.toml
api/app/: main.py
api/app/model/: base_dto.py  chat_message_dto.py  chat_session_dto.py  crew_output_model.py  enquiry_response_dto.py  incident_report_dto.py  incident_report_embedding_dto.py
api/app/repository/: chat_message_repository.py  chat_session_repository.py  db_session.py  incident_report_embedding_repository.py  incident_report_repository.py  repository.py
api/app/routers/: audio.py  chat_router.py  incident_report_router.py  websocket_reporting_router.py
api/app/schemas/: chat_message.py  chat_session.py  incident_report.py  incident_report_embedding.py  models.py
api/app/services/audio/: file_handler.py  transcribe_service.py
api/app/services/investigation/: investigation_agent_factory.py  investigation_service.py
api/app/services/llms/: reporting_service.py
api/app/services/openai/: openai_client.py
api/app/services/rag/: embedding_service.py  rag_service.py
api/app/services/websocket/: connection_manager.py
api/migrations/: env.py
api/migrations/versions/: 336ce21e0b23_alter_incident_report_embedding_table.py  3d6bdd28651c_add_chatmessage_chatsession.py  4fe22985229b_alter_incident_report_tbl_create_.py  7aee3524f65c_create_incident_report_table.py  8178017d07a3_remove_relation.py  a4e5bb3ffaa6_add_chatmessage_chatsession.py
api/uploads/audio/: 647f58f7-4841-4ea9-93bc-1caafb29b80f.pcm  6774935c-6719-4eda-a7db-bdac53188930.pcm
ui/: .env.production  (+4 more)
(+23 files in other folders)
