[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "crewai>=0.108.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.27",
    "openai>=1.72.0",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "sqlalchemy>=2.0.40",
]
